# argus

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_PLAN.md  CLAUDE.md  DECISIONS.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
api/: Dockerfile  pyproject.toml
api/app/: auth.py  config.py  main.py  schemas.py
api/app/routers/: admin.py  anomalies.py  briefs.py  market.py  research.py  watchlist.py
api/tests/: conftest.py  test_briefs_anomalies.py  test_market.py  test_research.py  test_watchlist.py
core/: pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 20260703_0001_initial.py  20260703_0002_rag_queries.py  20260710_0003_briefs_anomalies.py
core/argus_core/: cache.py  config.py  db.py  email.py  embeddings.py  llm.py  models.py  qdrant.py  repository.py  seed.py
core/argus_core/clients/: base.py  coingecko.py  defillama.py  mempool.py
core/argus_core/prompts/: __init__.py  daily_brief_v1.txt  rag_answer_v1.txt  rag_rewrite_v1.txt
core/tests/: test_clients.py
docs/: linkedin-post.md  portfolio-copy.md
docs/screenshots/: README.md
eval/: run_eval.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/anomalies/: page.tsx
frontend/src/app/api/research/: route.ts
frontend/src/app/briefs/: page.tsx
frontend/src/app/briefs/[brief_date]/: page.tsx
frontend/src/app/dashboard/: loading.tsx  page.tsx
frontend/src/app/research/: page.tsx
frontend/src/components/: nav-link.tsx  sparkline.tsx  ui.tsx
frontend/src/components/anomalies/: anomaly-row.tsx
frontend/src/components/briefs/: markdown.tsx
frontend/src/components/dashboard/: anomaly-badge.tsx  btc-tiles.tsx  tvl-panel.tsx  unlock-calendar.tsx  watchlist-table.tsx
frontend/src/components/research/: answer-markdown.tsx  citation-seal.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
infra/: .env.prod.example  Caddyfile  cloudformation.yaml  deploy.sh  host-setup.sh
infra/backup/: backup.sh  restore.sh
worker/: Dockerfile  pyproject.toml
worker/app/: anomaly.py  backfill.py  brief.py  config.py  ingest.py  jobs.py  main.py  run_brief.py  snapshots.py
worker/app/ingestion/: embed.py  finma.py  mica.py  types.py  whitepapers.py
worker/tests/: test_anomaly.py  test_brief.py  test_finma.py  test_ingest_diff.py  test_ingest_trigger.py  test_jobs.py  test_mica.py  test_whitepapers.py
