[project]
name = "argus-worker"
version = "0.1.0"
description = "Argus scheduled jobs worker"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "pydantic-settings>=2.3",
    "argus-core",
    "beautifulsoup4>=4.12",
    "pypdf>=4.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "bs4.*", "fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
